--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,237 @@
+
+
+body {
+  margin: 0;
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f2f1d6 !important;  
+  color: #333;
+}
+
+.imag{
+  width: 1%;
+  height:10px;
+}
+/* recipes page*/
+
+.recipes-container {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 150px;
+}
+.post {
+  display: flex;
+  gap: 100px;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  background-color: hsl(46, 92%, 62%);
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+
+}
+
+/* this line makes the posts in the opposite order to show */
+.post:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.post img {
+  width: 40%;
+  flex: 0, 2, 40%;
+  position: relative;
+  margin-right: 0;
+}
+
+.post .content {
+  display: flex;
+  flex: 1, 2, 60%;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.post h3 {
+  margin-top: 0;
+  color: #333;
+}
+
+.post p {
+  color: #666;
+}
+
+.link, .btn {
+  text-decoration: none;
+  color: blue;
+}
+
+
+/*this is for single recipe*/
+
+.singlerecipe{
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column; /* changed to ensure vertical layout */
+  align-items: center; /* center children horizontally */
+  gap: 50px;
+  width: 90%; /* Ensure it doesn't overflow the viewport */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.singlerecipe .image{
+  width: 100%;
+  height:auto;
+  object-fit: cover;
+}
+
+.singlerecipe .content {
+  flex: 1;
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center content horizontally */
+  width: 100%;
+}
+
+.singlerecipe .edit{
+  display: flex;
+  gap: 5px;
+}
+.singlerecipe img{
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.singlerecipe .postDate p {
+    font-size: 14px;
+    color:#333;
+
+}
+
+.singlerecipe .edit img {
+  width: 24px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.singlerecipe h1 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.singlerecipe p {
+  font-size: 16px;
+  color: #666;
+  line-height: 1.6;
+}
+
+
+.menu {
+  flex:2;
+}
+
+
+
+.btn {
+  width:max-content;
+  padding: 10px 20px;
+  margin-top: 10px;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 20px;
+}
+
+nav.navbar {
+  padding: 0, 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999;
+  background-color: hsl(46, 92%, 62%);
+  transition: 0.32 ease-in-out;
+  display:flex;
+  align-items:center;
+  background-color: #f7d70a !important;
+}
+
+
+nav.navbar a.navbar-brand img {
+  width: 50px;
+  margin-right:20px;
+}
+
+nav.navbar .navbar-nav .nav-link.navbar-link {
+  padding: 0 30px; /* Add space between links */
+  transition: color 0.2s, background-color 0.2s;
+}
+
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
+nav.navbar .navbar-nav a.nav-link.navbar-link.active {
+  opacity: 1;
+}
+
+span.navbar-text {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav li {
+  margin: 0 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+h1 {
+  margin-top: 3000px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 48px;
+  color: #333;
+  margin: 20px 0;
+}
+
+.name {
+  color: #a05024;
+}
+
+p {
+  font-size: 18px;
+  margin: 20px 0;
+}
+
+.hire-me {
+  font-size: 16px;
+  text-decoration: none;
 }
