--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,11 @@ body {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   text-align: center;
   margin: auto;
-
 }
 
 .card:hover {
-  transform: translateY(-10px), translateX(-10px);
-  box-shadow: 15px, 10px, yellowgreen;
+  transform: translateY(-10px);
+  box-shadow:  10px, yellowgreen;
 }
 
 
@@ -138,11 +137,11 @@ body {
   margin: 5px;
   cursor: pointer;
   margin: 10px;
+  object-fit: cover;
 }
 
 .singlepost img{
-  width: 50px;
-  height: 50px;
+  height: 60px;
   cursor: pointer;
   object-fit: cover;
 }
@@ -379,7 +378,7 @@ footer {
   background-color: rgb(228, 236, 228);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content:center;
   font-size: 12px;
 }
 
